fix: changed mobile container to have no x overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -119,8 +119,12 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html,
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100vw;
   }
 }
 
